--- a/CookMania/Base.lproj/Main.storyboard
+++ b/CookMania/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="T8W-cN-wVa">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -31,17 +31,17 @@
                     </view>
                     <navigationItem key="navigationItem" id="Fb4-VJ-3Uy"/>
                     <connections>
-                        <segue destination="6qe-kK-Ooc" kind="show" identifier="toHome" id="MNa-hb-wbn"/>
+                        <segue destination="KIY-CA-chJ" kind="show" identifier="toHome" id="g4q-oo-Mnh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1072.8" y="128.18590704647679"/>
         </scene>
-        <!--Home View Controller-->
+        <!--Home-->
         <scene sceneID="uLI-0m-E8c">
             <objects>
-                <viewController id="6qe-kK-Ooc" customClass="HomeViewController" customModule="CookMania" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Home" id="6qe-kK-Ooc" customClass="HomeViewController" customModule="CookMania" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ml1-ED-Gqx">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -105,13 +105,15 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="UUJ-ki-5WI"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Home" image="home" id="DiC-DU-j0F"/>
+                    <navigationItem key="navigationItem" id="vbF-6b-6PB"/>
                     <connections>
                         <segue destination="Gjk-RB-pLa" kind="show" identifier="toRecipeList" id="DtB-Bu-ib5"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YAh-DS-Bcv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1997.5999999999999" y="126.38680659670166"/>
+            <point key="canvasLocation" x="3132" y="129"/>
         </scene>
         <!--Recipe List View Controller-->
         <scene sceneID="K5N-nZ-bTW">
@@ -158,28 +160,100 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qi2-34-0dG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2941.5999999999999" y="125.4872563718141"/>
+            <point key="canvasLocation" x="4076" y="128"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="IQH-Lt-ibk">
+            <objects>
+                <tabBarController id="wFa-SL-jbN" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="h49-IK-7H2"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="b0u-ir-NAC">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="6qe-kK-Ooc" kind="relationship" relationship="viewControllers" id="bam-qi-EaF"/>
+                        <segue destination="Lfh-KX-U7R" kind="relationship" relationship="viewControllers" id="ph2-92-OCN"/>
+                        <segue destination="TKr-Uu-6v1" kind="relationship" relationship="viewControllers" id="uJR-1c-MUQ"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3Rp-Qy-pA3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2193" y="896"/>
+        </scene>
+        <!--Favorites-->
+        <scene sceneID="L0B-7k-O4t">
+            <objects>
+                <viewController title="Favorites" id="Lfh-KX-U7R" customClass="FavoritesViewController" customModule="CookMania" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="OXT-HQ-bNv">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Favorites" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mnz-rE-FCE">
+                                <rect key="frame" x="106" y="299" width="162" height="69"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="RwQ-ee-ozG"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" systemItem="favorites" id="zYz-sq-QnZ"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rFl-jM-1Fp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3132" y="895.50224887556226"/>
+        </scene>
+        <!--Shopping List-->
+        <scene sceneID="wgP-uc-vtO">
+            <objects>
+                <viewController title="Shopping List" id="TKr-Uu-6v1" customClass="ShoppingListViewController" customModule="CookMania" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="fiq-va-Unt">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Shopping List" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rn1-Pm-eev">
+                                <rect key="frame" x="118" y="301" width="138" height="65"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="ozt-CP-aNM"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Shopping List" image="shop-cart" id="DKd-gN-gyq"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MBS-bv-gW0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3132" y="1722.1889055472266"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="d6P-bC-UDe">
+        <scene sceneID="7eD-xa-b5w">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="T8W-cN-wVa" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="KIY-CA-chJ" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zEG-de-Jam">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="JC1-Pd-YII">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="FxK-Ua-BIX"/>
+                        <segue destination="wFa-SL-jbN" kind="relationship" relationship="rootViewController" id="4Ij-CF-2fk"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="CvG-Dm-lHs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vA0-ii-Liv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="105" y="128"/>
+            <point key="canvasLocation" x="2193" y="129"/>
         </scene>
     </scenes>
     <resources>
         <image name="cacciatore" width="420" height="236.25"/>
+        <image name="home" width="51.200000762939453" height="51.200000762939453"/>
+        <image name="shop-cart" width="51.200000762939453" height="51.200000762939453"/>
     </resources>
 </document>
